objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__LastSavedOn__c</fullName>
        <description>The date and time this quote was last saved.</description>
        <inlineHelpText>The date and time this quote was last saved.</inlineHelpText>
        <label>Last Saved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemCount__c</fullName>
        <description>Number of line items in this quote.</description>
        <inlineHelpText>Number of line items in this quote.</inlineHelpText>
        <label>Line Item Count</label>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsGrouped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option that allows you to use SolutionGroups(TM) or ad hoc groups to categorize and subtotal quote line items.</description>
        <inlineHelpText>Select this option to use SolutionGroups(TM) or add your own groups on the Edit Lines page to categorize and subtotal quote line items.</inlineHelpText>
        <label>Group Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsPrinted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Option which when checked prints individual line items on the PDF document.</description>
        <inlineHelpText>Select the checkbox to print individual line items on the generated PDF quote document for group quotes.</inlineHelpText>
        <label>Print Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>Total List Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>List Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items on this quote.</description>
        <inlineHelpText>Default markup rate applied to line items on this quote. You&apos;ll be able to override this value on group and line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master contract with which subscription products in this quote are to be co-terminated.</description>
        <inlineHelpText>Master contract with which subscription products in this quote are to be co-terminated.</inlineHelpText>
        <label>Master Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.SBQQ__Evergreen__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes</relationshipLabel>
        <relationshipName>CoTerminatedQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterEvergreenContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designate this contract as the master evergreen contract for the quote.</description>
        <inlineHelpText>Designate this contract as the master evergreen contract for the quote.</inlineHelpText>
        <label>Master Evergreen Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.SBQQ__Evergreen__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes (Master Evergreen Contract)</relationshipLabel>
        <relationshipName>CoTerminatedQuotesEvergreen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetAmount__c</fullName>
        <description>Total Net Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total Net Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>Net Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__Notes__c</fullName>
        <description>Notes printed on the generated PDF document.</description>
        <inlineHelpText>Notes printed on the generated PDF document.</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with this Quote.</description>
        <inlineHelpText>Opportunity associated with this Quote.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderByQuoteLineGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged while setting the Quote to &quot;Ordered&quot;, an Order will be created for each Quote Line Group with their associated Quote Lines.</description>
        <inlineHelpText>If flagged while setting the Quote to &quot;Ordered&quot;, an Order will be created for each Quote Line Group with their associated Quote Lines.</inlineHelpText>
        <label>Order By Quote Line Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBy__c</fullName>
        <description>The Quote Line field used to determine order grouping.</description>
        <inlineHelpText>The Quote Line field used to determine order grouping.</inlineHelpText>
        <label>Order By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QuantityBasedFormulaField__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductFamily__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__StartDate__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ChargeType__c</fullName>
                </value>
                <value>
                    <fullName>ProductFamily__c</fullName>
                    <isActive>false</isActive>
                    <label>ProductFamily__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend: Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend: Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag to drive automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from this quote, if it is a primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Quote is an Amend: Re-Quote, this field points to the original quote.</description>
        <inlineHelpText>If this Quote record represents a change order, use this field to link back to the original quote.</inlineHelpText>
        <label>Original Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Amend: Re-Quotes</relationshipLabel>
        <relationshipName>ChangeOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaperSize__c</fullName>
        <description>Paper size of this document.</description>
        <inlineHelpText>Choose the paper size for this document.</inlineHelpText>
        <label>Paper Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaperSize</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Discount extended to the partner on this opportunity.</description>
        <inlineHelpText>Discount extended to the partner on this opportunity.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary partner on this deal (if any). Defaulted to partner marked as primary in Partners related list on the opportunity.</description>
        <inlineHelpText>Primary partner on this deal (if any). This field defaults to the partner marked as primary in the Partners related list on the opportunity.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Quotes</relationshipLabel>
        <relationshipName>PartnerQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote.</description>
        <inlineHelpText>Terms that govern payment of the items in this quote.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Book associated with this Quote.</description>
        <inlineHelpText>Price Book associated with this Quote.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricebookId__c</fullName>
        <description>ID of the Price Book used by this quote.</description>
        <inlineHelpText>ID of the Price Book used by this quote.</inlineHelpText>
        <label>Pricebook ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for the quote. This person&apos;s name will appear on generated quote document.</description>
        <inlineHelpText>Primary contact for the quote. This person&apos;s name will appear on generated quote document.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox which if checked designates the quote as the Primary Quote</description>
        <inlineHelpText>Select this checkbox to designate this quote as the primary one on the opportunity and sync quote line items with opportunity line items.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProrationDayOfMonth__c</fullName>
        <description>When an order is created from this quote, the value in this field is copied to the order’s Billing Day of Month field.</description>
        <inlineHelpText>Indicates the Proration Day of Month that aligns with Billing Day of Month</inlineHelpText>
        <label>Proration Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLanguage__c</fullName>
        <description>Language used for this Quote when mass generating Quote Documents</description>
        <inlineHelpText>Language used for this Quote when mass generating Quote Documents</inlineHelpText>
        <label>Quote Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexican)</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcessId__c</fullName>
        <description>ID of the quote process to use with this quote. This field is meant to be populated by a workflow rule.</description>
        <inlineHelpText>Guided selling process ID to use with this quote, if any.</inlineHelpText>
        <label>Quote Process Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplateId__c</fullName>
        <description>ID of quote template that must be used when generating documents from this quote.</description>
        <inlineHelpText>Stores a quote template ID if one is specified to use when generating quote PDF documents.</inlineHelpText>
        <label>Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularAmount__c</fullName>
        <description>Roll up of regular amounts of quote products.</description>
        <inlineHelpText>Total amount of non-optional line times before additional discounts are applied.</inlineHelpText>
        <label>Regular Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__RegularTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales rep responsible for this quote if different from the user who owns the quote record.</description>
        <inlineHelpText>Sales rep responsible for this quote if different from the user who owns the quote record.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCity__c</fullName>
        <description>City on the Ship To address for this quote.</description>
        <inlineHelpText>City on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCountry__c</fullName>
        <description>Country on the Ship To address for this quote.</description>
        <inlineHelpText>Country on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingName__c</fullName>
        <description>Name on the Ship To address for this quote.</description>
        <inlineHelpText>Name on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingPostalCode__c</fullName>
        <description>Postal Code on the Ship To address for this quote.</description>
        <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingState__c</fullName>
        <description>State/Province on the Ship To address for this quote.</description>
        <inlineHelpText>State/Province on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingStreet__c</fullName>
        <description>Street on the Ship To address for this quote.</description>
        <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote.</description>
        <inlineHelpText>Source of cloned quote. If cloned, this references the original quote cloned.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quotes (Source)</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this quote.</description>
        <inlineHelpText>Start date for subscriptions in this quote.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>Status indicating where quote is in its lifecycle.</description>
        <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</description>
        <inlineHelpText>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetCustomerAmount__c</fullName>
        <description>Customer amount to be targeted in calculating additional discounts.</description>
        <inlineHelpText>Enter desired customer amount to automatically calculate additional discount on discountable line items.</inlineHelpText>
        <label>Target Customer Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalCustomerDiscountAmount__c</fullName>
        <description>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</description>
        <formula>SBQQ__ListAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</inlineHelpText>
        <label>Total Customer Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Indicates the type of quote.</description>
        <inlineHelpText>Indicates the type of quote.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Re-Quote</fullName>
                </value>
                <value>
                    <fullName>eCommerce Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Uncalculated__c</fullName>
        <description>If selected, the quote hasn’t been calculated.</description>
        <formula>( NOT( ISNULL( SBQQ__LastCalculatedOn__c ) ) &amp;&amp; SBQQ__LastSavedOn__c &gt; SBQQ__LastCalculatedOn__c ) || ( NOT ( ISNULL ( SBQQ__LastSavedOn__c) ) &amp;&amp; ISNULL ( SBQQ__LastCalculatedOn__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the quote hasn’t yet been calculated.</inlineHelpText>
        <label>Uncalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Unopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quote has ever been opened to determine if it is a new quote.</description>
        <inlineHelpText>Indicates whether the quote has ever been opened to determine if it is a new quote.</inlineHelpText>
        <label>Unopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the watermark in the Quote Document is displayed.</description>
        <inlineHelpText>Select the checkbox to display watermark in the Quote Document.</inlineHelpText>
        <label>Watermark Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_ARR__c</fullName>
        <inlineHelpText>The total Annual Recurring Revenue in this quote.</inlineHelpText>
        <label>Total ARR</label>
        <summarizedField>SBQQ__QuoteLine__c.ARR__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <inlineHelpText>The Total Cost incurred on the quote.</inlineHelpText>
        <label>Total Cost</label>
        <summarizedField>SBQQ__QuoteLine__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_MRR__c</fullName>
        <inlineHelpText>The total Monthly Recurring Revenue in this quote.</inlineHelpText>
        <label>Total MRR</label>
        <summarizedField>SBQQ__QuoteLine__c.MRR__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_NRR__c</fullName>
        <inlineHelpText>The total Non-Recurring Revenue on this quote.</inlineHelpText>
        <label>Total NRR</label>
        <summarizedField>SBQQ__QuoteLine__c.Total_NRR__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TCV__c</fullName>
        <inlineHelpText>The Total Contract Value for this quote.</inlineHelpText>
        <label>Total TCV</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserRole</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__Replacement_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quotes (Replacement Quote)</relationshipLabel>
        <relationshipName>ChildQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>Customer_Self_Service_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <columns>SBQQ__StartDate__c</columns>
        <columns>SBQQ__SubscriptionTerm__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedByProfile__c</field>
            <operation>contains</operation>
            <value>Customer</value>
        </filters>
        <label>Customer Self Service Quotes</label>
    </listViews>
</CustomObject>